<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.microlife.software.a24hr_mt.CreateUserProfileActivity"
    android:id="@+id/activity_create_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_profile"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPFName"
        android:inputType="textPersonName"
        android:text="@string/defaultName"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:textColor="?attr/colorPrimaryDark"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:inputType="date"
        android:ems="10"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/etPFName"
        android:layout_alignStart="@+id/etPFName"
        android:text="@string/_1_jan_1990"
        android:textColor="?attr/colorPrimaryDark"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/birth_date"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginBottom="41dp"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPFName"
        android:text="@string/name"
        android:layout_above="@+id/etPFName"
        android:layout_alignStart="@+id/etPFName"
        android:textColor="@color/colorPrimaryDark" />

    <ImageButton
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:id="@+id/imgbtnSave"
        app:srcCompat="@drawable/create_button_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription=""
        tools:ignore="ContentDescription" />


</RelativeLayout>
