<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:orientation="horizontal"
    android:weightSum="1"
    android:background="@color/default_underline_indicator_selected_color" >

    <NumberPicker
        style="@android:style/Widget.Material.NumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker"
        android:gravity="center_vertical|center_horizontal"
        android:theme="?android:attr/numberPickerStyle"
        android:layout_marginTop="20dp"
        android:scrollbarSize="40dip"
        android:scrollbarStyle="outsideOverlay"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Cancel"
        android:layout_alignBaseline="@+id/btn_Set"
        android:layout_alignBottom="@+id/btn_Set"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/cancel" />

    <NumberPicker
        style="@android:style/Widget.Material.NumberPicker"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/numberPicker2"
        android:gravity="center_vertical|center_horizontal"
        android:scrollbarSize="40dip"
        android:scrollbarStyle="outsideOverlay"
        android:layout_alignBaseline="@+id/numberPicker"
        android:layout_alignBottom="@+id/numberPicker"
        android:layout_alignEnd="@+id/btn_Cancel" />

    <TextView
        tools:ignore="ObsoleteLayoutParam"
        android:text="@string/dot"
        android:layout_width="wrap_content"
        android:layout_weight="0.65"
        android:id="@+id/textView"
        android:gravity="center_vertical|center_horizontal"
        android:theme="?android:attr/numberPickerStyle"
        android:textStyle="normal|bold"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/numberPicker2"
        android:layout_alignBottom="@+id/numberPicker2"
        android:layout_toEndOf="@+id/numberPicker"
        android:layout_marginStart="16dp"
        android:layout_height="200dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Set"
        android:text="@string/set"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView"/>


</RelativeLayout>
