
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/flBady" >

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        tools:ignore="RtlHardcoded"
        android:id="@+id/rl_circle"
        android:background="@drawable/light_blue"
        android:layout_marginLeft="25dp"
        android:layout_height="300dp"
        android:layout_width="310dp">

        <ImageView
            app:srcCompat="@drawable/pic_smile"
            tools:ignore="ContentDescription"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/ivSmile"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="" />

        <TextView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:id="@+id/tvTRUnit"
            android:text="@string/celsius"
            android:textColor="@color/default_title_indicator_footer_color"
            android:textSize="18sp"
            android:layout_alignTop="@+id/tvTemprature"
            android:layout_toEndOf="@+id/tvTemprature"
            android:layout_marginTop="14dp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tvTemprature"
            android:gravity="center_horizontal|bottom"
            android:textSize="64sp"
            android:textColor="@color/default_line_indicator_selected_color"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/dea"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:maxLines="1" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:id="@+id/tvYear"
            android:textColor="@color/default_line_indicator_selected_color"
            android:textSize="24sp"
            android:textAlignment="gravity"
            android:layout_below="@+id/tvTemprature"
            android:layout_centerHorizontal="true"
            android:background="#00000000" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="310dp"
        android:layout_width="match_parent"
        android:id="@+id/rl_Setting"
        android:layout_height="90dp">

        <TextView
            tools:ignore="HardcodedText,TextViewEdits"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTPLow"
            android:inputType="numberDecimal"
            android:text="@string/noneLine"
            android:ems="10"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivBT"
            android:textSize="30sp" />

        <ImageView
            tools:ignore="ContentDescription"
            app:srcCompat="@drawable/pic_alarm_min"
            android:layout_height="32dp"
            android:layout_width="32dp"
            android:id="@+id/ivAlarm"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="" />

        <TextView
            android:layout_height="16dp"
            android:layout_width="12dp"
            android:id="@+id/tvUnitH"
            android:text="@string/celsius"
            android:textAlignment="viewStart"
            android:textColor="@color/default_line_indicator_selected_color"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tvTPLow" />

        <TextView
            android:layout_height="16dp"
            android:layout_width="12dp"
            android:id="@+id/tvUnitL"
            android:text="@string/celsius"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_red_dark"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tvTPHigh" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTPHigh"
            android:text="@string/noneLine"
            android:ems="10"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="25dp"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivAlarm" />

        <ImageView
            app:srcCompat="@android:drawable/stat_sys_data_bluetooth"
            tools:ignore="ContentDescription"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ivBT"
            android:contentDescription=""
            android:layout_alignTop="@+id/ivBattery"
            android:layout_alignParentStart="true"/>

        <ImageView
            app:srcCompat="@drawable/pic_battery_min"
            tools:ignore="ContentDescription"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ivBattery"
            android:layout_marginStart="21dp"
            android:contentDescription=""
            android:layout_below="@+id/tvTPLow"
            android:layout_toEndOf="@+id/ivBT"
            android:layout_marginTop="16dp"/>

    </RelativeLayout>


</FrameLayout>
